--- a/sass/style.scss
+++ b/sass/style.scss
@@ -925,7 +925,7 @@ a{
 
 
 #seller{
-    padding: 50px 0 500px 0;
+    padding: 50px 0 60px 0;
     background-color: $gray;
     .container{
         .seller__heading{
@@ -1107,9 +1107,105 @@ a{
 }
 
 
+// --------------recently part--------------
 
+#recent{
+    padding: 100px 0 500px 0;
+    .container{
+        .recent__heading{
+            position: relative;
+            margin-bottom: 32px;
+            &::after{
+                position: absolute;
+                content: "";
+                right: 145px;
+                transform: translateY(-50%);
+                top: 50%;
+                width: 70%;
+                height: 1px;
+                background-color: $darkgray;
 
+            }
+            h2{
+                font-size: 28px;
+                line-height: 35px;
+                color: $navtext;
 
+            }
+        }
+        .recent__wrapper{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            .recent__content_slider{
+                width: 100%;
+                position: relative;
+                .recent__content_main{
+                    width:16.66%;
+                    text-align: center;
+                    border: 1px solid $darkgray;
+                    text-align: center;
+                    background-color: #0E53A5;
+                    img{
+                        width: 100%;
+                        margin-bottom: 10px;
+                    }
+                    .recent__content_detail{                        
+                        padding: 0 10px;
+                        a{
+                            font-size: 15px;
+                            line-height: 16px;
+                            color: $textblue;
+                            text-transform: capitalize;
+                            font-weight: 700;
+                        }
+                        p{
+                            line-height: 20px;
+                            font-size: 10px;
+                            text-transform: uppercase;
+                            padding-bottom: 22px;
+                            border-bottom: 1px solid $darkgray;
+                            margin: 0;
+                        }
+                    }
+                    .recent__content_price{
+                        font-weight: 700;
+                        font-size: 17px;
+                        color: $black;
+                        text-align: end;
+                        padding: 5px 20px 20px 0;
+                    }
+                }
+                .slick-prev{
+                    position: absolute;
+                    top: 0px;
+                    right: 0;
+                    display: none;
+                    &::before{
+                        position: absolute;
+                        font-family: FontAwesome ;
+                        content: "\f053";
+                        right: 92px;
+                        top: -65px;
+                    }
+                }
+                .slick-next{
+                    position: absolute;
+                    top: 0px;
+                    right: 0;
+                    display: none;
+                    &::before{
+                        position: absolute;
+                        font-family: FontAwesome ;
+                        content: "\f054";
+                        right: 80px;
+                        top: -65px;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
