--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1110,7 +1110,7 @@ a{
 // --------------recently part--------------
 
 #recent{
-    padding: 100px 0 500px 0;
+    padding: 100px 0 80px 0;
     .container{
         .recent__heading{
             position: relative;
@@ -1145,7 +1145,6 @@ a{
                     text-align: center;
                     border: 1px solid $darkgray;
                     text-align: center;
-                    background-color: #0E53A5;
                     img{
                         width: 100%;
                         margin-bottom: 10px;
@@ -1180,26 +1179,42 @@ a{
                     position: absolute;
                     top: 0px;
                     right: 0;
-                    display: none;
+                    background-color: transparent;
+                    border: 0;
+                    font-size: 0;
+                    transition: all linear 0.2s;
+                    color: $darkgray;
+                    &:hover{
+                        color: $green;
+                    }
                     &::before{
                         position: absolute;
                         font-family: FontAwesome ;
                         content: "\f053";
-                        right: 92px;
-                        top: -65px;
+                        right: 90px;
+                        top: -67px;
+                        font-size: 22px;
                     }
                 }
                 .slick-next{
                     position: absolute;
                     top: 0px;
                     right: 0;
-                    display: none;
+                    background-color: transparent;
+                    border: 0;
+                    font-size: 0;
+                    transition: all linear 0.2s;
+                    color: $darkgray;
+                    &:hover{
+                        color: $green;
+                    }
                     &::before{
                         position: absolute;
                         font-family: FontAwesome ;
                         content: "\f054";
-                        right: 80px;
-                        top: -65px;
+                        right: 70px;
+                        top: -67px;
+                        font-size: 22px;
                     }
                 }
             }
@@ -1207,6 +1222,98 @@ a{
     }
 }
 
+
+// ---------------brand part---------------
+
+#brand{
+    padding:30px 0 100px 0;
+    .container{
+        .brand__heading{
+            position: relative;
+            margin-bottom: 32px;
+            font-size: 28px;
+            line-height: 35px;
+            color: $navtext;
+            &::after{
+                position: absolute;
+                content: "";
+                right: 145px;
+                transform: translateY(-50%);
+                top: 50%;
+                width: 70%;
+                height: 1px;
+                background-color: $darkgray;
+
+            }
+        }
+        .brand__wrapper{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            .brand__slider{
+                width: 100%;
+                .brand__main{
+                    height: 100px;
+                    font-size: 60px;
+                    color: $white;
+                    text-align: center;
+                    padding: 0 20px;
+                    .brand__img{
+                        width: 100%;
+                        border: 1px solid $darkgray;
+                        height: 100%;
+                        padding: 32px 12px;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                }
+                .slick-prev{
+                    position: absolute;
+                    top: 0px;
+                    right: 0;
+                    background-color: transparent;
+                    border: 0;
+                    font-size: 0;
+                    transition: all linear 0.2s;
+                    color: $darkgray;
+                    &:hover{
+                        color: $green;
+                    }
+                    &::before{
+                        position: absolute;
+                        font-family: FontAwesome ;
+                        content: "\f053";
+                        right: 90px;
+                        top: -67px;
+                        font-size: 22px;
+                    }
+                }
+                .slick-next{
+                    position: absolute;
+                    top: 0px;
+                    right: 0;
+                    background-color: transparent;
+                    border: 0;
+                    font-size: 0;
+                    transition: all linear 0.2s;
+                    color: $darkgray;
+                    &:hover{
+                        color: $green;
+                    }
+                    &::before{
+                        position: absolute;
+                        font-family: FontAwesome ;
+                        content: "\f054";
+                        right: 70px;
+                        top: -67px;
+                        font-size: 22px;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
