--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1375,7 +1375,116 @@ a{
     }
 }
 
+// --------------footer part----------------
 
+#footer{
+    padding: 160px 0 400px 0;
+    background-color: $gray;
+    border-top: 1px solid $bordergray;
+    .container{
+        .footer__wrapper{
+            position: relative;
+            .footer__logo_main{
+                .footer__logo{
+                    width: 235px;
+                    margin-bottom: 30px;
+                }
+                h2{
+                    font-size: 18px;
+                    font-weight: 700;
+                    margin-bottom: 30px;
+                    color: $navtext;
+                    line-height: 27px;
+                }
+                h3{
+                    font-size: 18px;
+                    margin-bottom: 40px;
+                    line-height: 27px;
+                    color: $navtext;
+                    font-weight: 400;
+                }
+                p{
+                    font-style: 18px;
+                    font-weight: 700;
+                    line-height: 28px;
+                    margin-bottom: 12px;
+                }
+                .footer__icon{
+                    display: flex;
+                    column-gap: 15px;
+                    a{
+                        width: 35px;
+                        height: 35px;
+                        border-radius: 50%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background-color: $black;
+                        color: $white;
+                        transition: all linear 0.3s;
+                        &:hover{
+                            background-color: $green;
+                        }
+                    }
+                }
+            }
+            .footer__find{
+                h2{
+                    padding-bottom: 32px;
+                    font-size: 20px;
+                    text-transform: capitalize;
+                    line-height: 24px;
+                    color: $navtext;
+                    font-weight: 700;
+                }
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    row-gap: 10px;
+                    li{
+                        a{
+                            font-style: 12px;
+                            color: $perablack;
+                            text-transform: capitalize;
+                            font-weight: 600;
+                            transition: all linear 0.2s;
+                            &:hover{
+                                color: $green;
+                            }
+                        }                    
+                    }
+                }
+            }
+            .footer__search{
+                position: absolute;
+                top:-190px;
+                left: 18%;
+                display: flex;
+                width: 60%;
+                input{
+                    padding: 18px 18px 18px 35px;
+                    width: 90%;
+                    border: 1px solid $bordergray;
+                    border-radius: 5px 0 0 5px;
+                    outline: none;
+                }
+                .footer__btn{
+                    padding: 19px 31px 20px 31px;
+                    background-color: $green;
+                    color: $white;
+                    border-radius:  0 5px 5px 0;
+                    text-transform: capitalize;
+                    font-weight: 700;
+                    transition: all linear 0.2s;
+                    &:hover{
+                        opacity: 0.8;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }        
+    }
+}
 
 
 
